trunk/pymunk/Chipmunk_src/cpJoint.h



typedef struct cpJoint {
	cpBody *a, *b;

	void (*preStep)(struct cpJoint *joint, cpFloat dt_inv);
	void (*applyImpulse)(struct cpJoint *joint);
} cpJoint;



typedef struct cpSlideJoint {
	cpJoint joint;
	cpVect anchr1, anchr2;
	cpFloat min, max;
	
	cpVect r1, r2;
	cpVect n;
	cpFloat nMass;
	
	cpFloat jnAcc, jBias;
	cpFloat bias;
} cpSlideJoint;


cpSlideJoint *cpSlideJointAlloc(void);

cpSlideJoint *cpSlideJointInit(cpSlideJoint *joint, cpBody *a, cpBody *b, cpVect anchr1, cpVect anchr2, cpFloat min, cpFloat max);

cpJoint *cpSlideJointNew(cpBody *a, cpBody *b, cpVect anchr1, cpVect anchr2, cpFloat min, cpFloat max);



typedef struct cpPivotJoint {
	cpJoint joint;
	cpVect anchr1, anchr2;
	
	cpVect r1, r2;
	cpVect k1, k2;
	
	cpVect jAcc, jBias;
	cpVect bias;
} cpPivotJoint;


cpPivotJoint *cpPivotJointAlloc(void);

cpPivotJoint *cpPivotJointInit(cpPivotJoint *joint, cpBody *a, cpBody *b, cpVect pivot);

cpJoint *cpPivotJointNew(cpBody *a, cpBody *b, cpVect pivot);